--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,7 @@
     --primary-color: #f9b64d;
 }
 
+
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
@@ -68,8 +69,8 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
 }
 
 .showcase form input,
@@ -89,7 +90,7 @@ form button {
     border: none;
     border-radius: 5px;
     background: #333;
-    color: #fff;n
+    color: #fff;
     cursor: pointer;
     margin-top: 20px;
 }
@@ -101,7 +102,10 @@ form button:hover {
 /* Image */
 
 .image {
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
     margin-top: 2rem;
 }
 
@@ -115,3 +119,15 @@ img {
     text-align: center;
     margin-top: 1rem;
 }
+
+.form-control{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+}
+
+.option{
+    max-width: 10%;
+}
+
