--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,133 +1,137 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap");
 
 *,
 *:before,
 *:after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 :root {
-    --primary-color: #f9b64d;
+  --primary-color: #f9b64d;
 }
 
-
 body {
-    font-family: 'Poppins', sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    color: #333;
-    background: #f4f4f4;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #333;
+  background: #f4f4f4;
 }
 
 /* Navbar */
 .navbar {
-    background: #333;
-    color: #fff;
-    padding: 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background: #333;
+  color: #fff;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navbar ul {
-    list-style: none;
-    display: flex;
+  list-style: none;
+  display: flex;
 }
 
 .navbar ul li {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 .navbar a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1.2rem;
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.2rem;
 }
 
 .navbar a:hover {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
 
 /* Showcase */
 .showcase {
-    height: 450px;
-    width: 100%;
-    background: var(--primary-color);
+  height: 450px;
+  width: 100%;
+  background: var(--primary-color);
 }
 
 .showcase h1 {
-    font-size: 2.5rem;
-    color: #333;
-    text-align: center;
-    padding: 1rem 0;
+  font-size: 2.5rem;
+  color: #333;
+  text-align: center;
+  padding: 1rem 0;
 }
 
 .showcase form {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    /* height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  /* height: 100%;
     width: 100%; */
 }
 
 .showcase form input,
 form select {
-    font-size: 20px;
-    width: 500px;
-    max-width: 500px;
-    padding: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-bottom: 1rem;
+  font-size: 20px;
+  width: 500px;
+  max-width: 500px;
+  padding: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 1rem;
 }
 
 form button {
-    font-size: 20px;
-    padding: 1rem 2rem;
-    border: none;
-    border-radius: 5px;
-    background: #333;
-    color: #fff;
-    cursor: pointer;
-    margin-top: 20px;
+  font-size: 20px;
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 5px;
+  background: #333;
+  color: #fff;
+  cursor: pointer;
+  margin-top: 20px;
 }
 
 form button:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 /* Image */
 
 .image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80%;
-    margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* width: 80%; */
+  margin-top: 2rem;
+  padding-bottom: 10%;
 }
 
 img {
-    display: block;
-    margin: auto;
+  width: 80%;
 }
-
-.msg {
-    font-size: 1.6rem;
-    text-align: center;
-    margin-top: 1rem;
-}
-
-.form-control{
+.img{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80%;
 }
 
-.option{
-    max-width: 10%;
+
+.msg {
+  font-size: 1.6rem;
+  text-align: center;
+  margin-top: 1rem;
 }
 
+.form-control {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+}
+
+.option {
+  max-width: 10%;
+}
